--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -80,8 +80,8 @@ button{
 }
 
 .profile-item p {
-    font-size: 16px;
-    color: #808080;
+      color: grey;
+    font-size: 14px;
     width: 100%;
 
 }
