--- a/src/components/Login/style.css
+++ b/src/components/Login/style.css
@@ -161,3 +161,17 @@ body{
     gap: 24px;
     justify-content: center;
 }
+
+@media screen and(min-width: 400px) {
+    .section-login-image img {
+        width: 154%;
+        filter: brightness(0.5) grayscale(0);
+        border-radius: 0 10px 10px 0;
+        background: rgba(0, 0, 0, 0.5);
+        -webkit-clip-path: polygon(9% 0, 100% 0, 100% 100%, 0% 100%);
+        clip-path: polygon(9% 0, 100% 0, 100% 100%, 0% 100%);
+        z-index: -1;
+        height: 100%;
+        object-fit: cover;
+    }
+ }
